[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
password-hash = { version = "0.4", features = ["alloc"] }
argon2 = { version = "0.4", features = ["alloc"] }
jsonwebtoken-google = "0.1"
serde = { version = "1.0", features = ["derive"] }
redb = { version = "0.10", optional = true }
bincode = "1.3"
thiserror = "1.0.37"
sled = { version = "0.34", optional = true }
